--- a/book_kor.tex
+++ b/book_kor.tex
@@ -29,7 +29,7 @@
 \frontmatter
 
 \input{00-cover}
-\input{00-preface}
+%\input{00-preface}
 
 % START THE BOOK
 \mainmatter
@@ -41,22 +41,22 @@
 \input{05-iterations.tex}
 \input{06-strings.tex}
 \input{07-files.tex}
-\input{08-lists.tex}
-\input{09-dictionaries.tex}
-\input{10-tuples.tex}
-\input{11-regex}
-\input{12-network}
-\input{13-web}
-\input{14-database}
-\input{15-viz}
-\input{16-tasks}
+%\input{08-lists.tex}
+%\input{09-dictionaries.tex}
+%\input{10-tuples.tex}
+%\input{11-regex}
+%\input{12-network}
+%\input{13-web}
+%\input{14-database}
+%\input{15-viz}
+%\input{16-tasks}
 
 \appendix
 
-\input{AA-windows}
-\input{AB-apple}
-\input{AC-contrib}
-\input{AD-copyright}
+%\input{AA-windows}
+%\input{AB-apple}
+%\input{AC-contrib}
+%\input{AD-copyright}
 
 \normalsize
 
