Inital Ch08 Draft

--- a/09-dictionaries.tex
+++ b/09-dictionaries.tex
@@ -1,7 +1,7 @@
 % LaTeX source for ``Python for Informatics: Exploring Information''
 % Copyright (c)  2010-  Charles R. Severance, All Rights Reserved
 
-\chapter{Dictionaries}
+\chapter{딕셔너리(Dictionaries)}
 \index{dictionary}
 
 \index{dictionary}
