Inital Ch09 Draft

--- a/10-tuples.tex
+++ b/10-tuples.tex
@@ -1,10 +1,10 @@
 % LaTeX source for ``Python for Informatics: Exploring Information''
 % Copyright (c)  2010-  Charles R. Severance, All Rights Reserved
 
-\chapter{Tuples}
+\chapter{튜플(Tuples)}
 \label{tuplechap}
 
-\section{Tuples are immutable}
+\section{튜플은 불변하다.}
 
 \index{tuple}
 \index{type!tuple}
