--- a/book_kor.tex
+++ b/book_kor.tex
@@ -41,10 +41,10 @@
 \input{05-iterations.tex}
 \input{06-strings.tex}
 \input{07-files.tex}
-%\input{08-lists.tex}
-%\input{09-dictionaries.tex}
-%\input{10-tuples.tex}
-%\input{11-regex}
+\input{08-lists.tex}
+\input{09-dictionaries.tex}
+\input{10-tuples.tex}
+\input{11-regex}
 %\input{12-network}
 %\input{13-web}
 %\input{14-database}
